@@ -15,6 +15,7 @@ Below are some of the more interesting features, that already work
 - Creation of multiple terrains
 - Basic support for loading heightmaps
 - Editing terrain height with brushes
+- A skybox (not exportable yet)
 - Loading of g3db files
 - Loading of obj/fbx/dae files (note, that the [fbx-conv](https://github.com/libgdx/fbx-conv) binary must be set in the settings)
 - Placement of models in the world
