@@ -1,7 +1,8 @@
 [0.0.4]
 - Font Awesome as icon font
 - Adding scenes & switching between them
-- Fog
+- Customizable Fog
+- A Skybox
 
 [0.0.3] ~ 02/01/2016
 - Model/asset selection moved to sidebar
